# AlphaParticlesCpp

./: .gitignore  CMakeLists.txt  README.md
drivers/: #mapping_convergence.py#  .#mapping_convergence.py  cheb2dinterp.py  cheb3dinterp.py  driver.py  gyro_vs_dns.py  helpers.py  mapping.py  mapping_color.py  mapping_color_error.py  mapping_convergence.py  mapping_iteratively.py  poincareplot.py  poincaretest.py  test_compute_single_reactor_revolution.py  time_check.py  tps100.sh  tps_convergence.py  tps_vs_cheb.py  tpsinterp.py  tpsplot.py  tpstest.py
particletracing/: antoinefield.h  coordhelpers.cpp  coordhelpers.hpp  magneticfield.cpp  magneticfield.h  magneticfield.hpp  particletracing.cpp  particletracing.hpp  python.cpp  rootfinding.cpp  rootfinding.hpp
